--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,9 @@
     <string name="no_hills_walked">You have not walked any hills yet, go bag some!</string>
     <string name="hill_walked_height_desc">Height: %1$.0f(m) %2$.0f(ft)</string>
     <string name="hill_walked_date_desc">Walked: %1$1s</string>
+    <string name="close">Close</string>
+    <string name="hill_dialog_position">Latitude: %1$s   Longitude: %2$s</string>
+    <string name="hill_dialog_view_bagging_url">View Hill Bagging entry</string>
+    <string name="hill_dialog_view_map">View on map</string>
+    <string name="google_maps_key" translatable="false"  templateMergeStrategy="preserve">YOUR_KEY_HERE</string>
 </resources>
