--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="app_name">Hill Bagging</string>
     <string name="title_home">Home</string>
-    <string name="title_dashboard">Dashboard</string>
+    <string name="title_search">Search</string>
     <string name="title_notifications">Notifications</string>
     <string name="number_of_walked_hills">You have current walked %1$2d hill(s) (%2$.2f%%). The hill(s) you have walked are shown below.</string>
     <string name="no_hills_walked">You have not walked any hills yet, go bag some!</string>
