--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,4 +28,8 @@
     <string name="track_plot_period_summary">Plot your position once ever %1$ss</string>
     <string name="track_bag_distance">Automatic claim distance</string>
     <string name="track_bag_distance_summary">Automatically bag hills within %1$sm</string>
+
+    <!-- Permission explanations -->
+    <string name="perm_required_title">Permission Required</string>
+    <string name="perm_fine_location_detail">Access is required to your devices fine location so that it can gain GPS coordinates while tracking a live walk. Without this permission live tracking is not possible.</string>
 </resources>
