--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,14 +23,21 @@
     <!-- Preference Titles -->
     <string name="tracking_header">Live Tracking</string>
 
-    <!-- Live Tracking Preferences -->
+    <!-- Live Tracking -->
     <string name="track_plot_period">Plot period</string>
     <string name="track_plot_period_summary">Plot your position once ever %1$ss</string>
     <string name="track_bag_distance">Automatic claim distance</string>
     <string name="track_bag_distance_summary">Automatically bag hills within %1$sm</string>
+    <string name="live_tracking_stop_description">Stop Live Tracking</string>
+    <string name="live_tracking_start_description">Start Live Tracking</string>
+    <string name="live_tracking_pause_description">Pause Live Tracking</string>
 
     <!-- Permission explanations -->
     <string name="perm_required_title">Permission Required</string>
     <string name="perm_fine_location_detail">Access is required to your devices fine location so that it can gain GPS coordinates while tracking a live walk. Without this permission live tracking is not possible.</string>
+    <string name="perm_foreground_service_detail">Access is required to create a foreground service so that Live Tracking can update your current location</string>
     <string name="perm_btn_request">Request Permissions</string>
+
+    <!-- Notifications -->
+    <string name="notification_text">You\'ve just bagged a hill!</string>
 </resources>
