--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,16 +1,22 @@
 <resources>
     <string name="app_name">Hill Tracker</string>
+    <!-- Menu Titles -->
     <string name="title_home">Home</string>
     <string name="title_search">Search</string>
     <string name="title_live_tracking">Live Tracking</string>
     <string name="title_nearby">Nearby</string>
     <string name="title_settings">Settings</string>
+    <string name="title_import_export">Import &amp; Export</string>
+
+    <!-- Home Fragment Strings -->
     <plurals name="numberOfHillsWalked">
         <item quantity="one">You have walked %1$2d hill (%2$.2f%%). The hill you have walked is shown below.</item>
         <item quantity="other">You have walked %1$2d hills (%2$.2f%%). The hills you have walked are shown below.</item>
     </plurals>
     <string name="no_hills_walked">You have not walked any hills yet, go bag some!</string>
     <string name="no_hills_walked_desc">You\'ve not walked any hills yet, get out and bag some or Search for hills you\'ve walked before and claim them!</string>
+
+    <!-- Hill Details Dialog -->
     <string name="hill_walked_height_desc">&lt;b>Height:&lt;/b> %1$.0f(m) %2$.0f(ft)</string>
     <string name="hill_walked_date_desc">&lt;b>Walked:&lt;/b> %1$1s</string>
     <string name="close">Close</string>
@@ -18,6 +24,8 @@
     <string name="hill_dialog_view_bagging_url">View on Hill-Bagging</string>
     <string name="hill_dialog_view_map">View on map</string>
     <string name="hill_dialog_mark_walked">Mark Walked</string>
+
+    <!-- Search Fragment Strings -->
     <string name="no_hill_search_results">No hills match your search</string>
     <string name="hill_search_hint">Find hill by name</string>
 
@@ -53,6 +61,7 @@
     <string name="nearby_header">Nearby Hills</string>
     <string name="nearby_distance_title">Distance to hill</string>
     <string name="nearby_distance_summary">Show hills within %1$skm</string>
+    <string name="no_hills_nearby">There are no hills nearby to show</string>
 
     <!-- Permission explanations -->
     <string name="perm_required_title">Permission Required</string>
@@ -62,7 +71,4 @@
 
     <!-- Notifications -->
     <string name="notification_text">Tracking your walking and bagging hills as you go!</string>
-
-    <!-- Hills Nearby -->
-    <string name="no_hills_nearby">There are no hills nearby to show</string>
 </resources>
