--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -67,6 +67,7 @@
     <string name="perm_required_title">Permission Required</string>
     <string name="perm_fine_location_detail">Access is required to your devices fine location so that it can gain GPS coordinates while tracking a live walk. Without this permission live tracking is not possible.</string>
     <string name="perm_foreground_service_detail">Access is required to create a foreground service so that Live Tracking can update your current location</string>
+    <string name="perm_external_storage_detail">Access is required to external storage to export your walked hills to CSV file.</string>
     <string name="perm_btn_request">Request Permissions</string>
 
     <!-- Notifications -->
@@ -83,5 +84,5 @@
     <string name="export_hill_desc">Export walked hills to upload to Hill-Bagging.co.uk. Either copy the CSV below and paste it into the upload page on Hill-Bagging.co.uk or export it to a file.</string>
     <string name="export_button">Export</string>
     <string name="unable_to_export_file">Unable to export to file</string>
-    <string name="export_file_success">Successfully exported walked hills to %1$s.</string>
+    <string name="export_file_success">Successfully exported walked hills to downloads directory.</string>
 </resources>
